# validator

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  README_RU.md  README_draft.md  compose.env  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
ads_validator/: asgi.py  settings.py  urls.py
ads_validator/ads_validator/: settings.py  urls.py  wsgi.py
compose/: .env  prod.env
compose/app/: Dockerfile  start.sh
compose/nginx/: Dockerfile  default.conf  nginx.conf
