[tool.poetry]
name = "ads-validator"
version = "0.1.0"
description = ""
authors = ["Danil Merkurev <danil.merkurev@yandex.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "3.2"
django-bootstrap-v5 = "^1.0.8"
django-celery-beat = "2.2.1"
django-celery-results = "2.2.0"
django-cors-headers = "3.11.0"
django-filter = "21.1"
django-health-check = "3.16.5"
django-redis = "5.2.0"
djangorestframework = "3.13.1"
djangorestframework-simplejwt = "5.0.0"
drf-spectacular = "0.21.2"
gunicorn = "20.1.0"
Pillow = "8.4.0"
psutil = "5.9.0"
python-dotenv = "0.19.2"
requests = "2.27.1"
responses = "0.18.0"
ujson = "5.1.0"
coverage = "^6.3"
Babel = "^2.9.1"
django-stubs-ext = "^0.3.1"
sentry-sdk = "^1.5.4"
celery = "^5.2.3"
django-private-storage = "^3.0"
pydantic = {extras = ["email"], version = "^1.9.1"}
gelf-formatter = "^0.2.1"

[tool.poetry.dev-dependencies]
django-stubs = "^1.9.0"
types-Pillow = "^9.0.5"
types-requests = "^2.27.7"
types-ujson = "^4.2.1"
djangorestframework-stubs = "^1.4.0"
celery-types = "^0.11.0"
flake8 = "^4.0.1"
flake8-builtins = "^1.5.3"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.django-stubs]
django_settings_module = "core.settings"
