[tool.poetry]
name = "ads-validator"
version = "0.1.0"
description = ""
authors = ["Danil Merkurev <danil.merkurev@yandex.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.1"
django-filter = "21.1"
gunicorn = "20.1.0"
requests = "2.27.1"
responses = "0.18.0"
django-cors-headers = "3.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"